--- a/GrowthPyramid Backend/Collaboration-Request/src/main/resources/application.properties
+++ b/GrowthPyramid Backend/Collaboration-Request/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Currency
+spring.application.name=Collaboration-Request
 server.port=8083
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/msaprojecttest
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 springdoc.api-docs.path=/api-docs
+
+spring.main.web-application-type=reactive
+
