--- a/GrowthPyramid Backend/api-gateway/src/main/resources/application.properties
+++ b/GrowthPyramid Backend/api-gateway/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.cloud.gateway.routes[2].id=analytics-service
 spring.cloud.gateway.routes[2].uri=http://localhost:8081
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/analytics/**
 
-spring.cloud.gateway.routes[3].id=currency-service
+spring.cloud.gateway.routes[3].id=Collaboration-Request
 spring.cloud.gateway.routes[3].uri=http://localhost:8083
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/currency/**
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/Collaboration-Request/**
