- Updated Comapny service - Updated swagger paths

--- a/GrowthPyramid Backend/api-gateway/src/main/resources/application.properties
+++ b/GrowthPyramid Backend/api-gateway/src/main/resources/application.properties
@@ -1,18 +1,22 @@
 spring.application.name=api-gateway
 server.port=8080
 
+# Company Service
 spring.cloud.gateway.routes[0].id=company-service
 spring.cloud.gateway.routes[0].uri=http://localhost:8082
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/company/**
 
+# Order Service
 spring.cloud.gateway.routes[1].id=order-service
 spring.cloud.gateway.routes[1].uri=http://localhost:8084
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/orders/**
 
+# Analytics Service
 spring.cloud.gateway.routes[2].id=analytics-service
 spring.cloud.gateway.routes[2].uri=http://localhost:8081
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/analytics/**
 
+#Collaboration Request Service
 spring.cloud.gateway.routes[3].id=Collaboration-Request
 spring.cloud.gateway.routes[3].uri=http://localhost:8083
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/Collaboration-Request/**
