--- a/GrowthPyramid Backend/api-gateway/src/main/resources/application.yml
+++ b/GrowthPyramid Backend/api-gateway/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
         - id: order-service
           uri: http://localhost:8084
           predicates:
-            - Path=/api/order/**
+            - Path=/api/orders/**
             -
         - id: analytics-service
           uri: http://localhost:8081
