--- a/GrowthPyramid Backend/OrderManagement/src/main/resources/application.properties
+++ b/GrowthPyramid Backend/OrderManagement/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-springdoc.api-docs.path=/api-docs
+springdoc.api-docs.path=/api/orders/api-docs
+springdoc.swagger-ui.path=/api/orders/swagger-ui
