--- a/GrowthPyramid Backend/OrderManagement/src/main/resources/application.properties
+++ b/GrowthPyramid Backend/OrderManagement/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 springdoc.api-docs.path=/api/orders/api-docs
 springdoc.swagger-ui.path=/api/orders/swagger-ui
+
+# Expose all actuator endpoints
+management.endpoints.web.exposure.include=*
+
+# Optional: Change base path (default is /actuator)
+management.endpoints.web.base-path=/actuator
