--- a/GrowthPyramid Backend/api-gateway/pom.xml
+++ b/GrowthPyramid Backend/api-gateway/pom.xml
@@ -38,6 +38,13 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
 
+        <!-- Spring Boot Actuator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+
         <!-- Spring Boot Starter Webflux -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
