--- a/GrowthPyramid Backend/api-gateway/src/main/resources/application.properties
+++ b/GrowthPyramid Backend/api-gateway/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.application.name=api-gateway
 server.port=8080
 
+# Expose all actuator endpoints
+management.endpoints.web.exposure.include=*
+
+# Optional: Change base path (default is /actuator)
+management.endpoints.web.base-path=/actuator
+
+
 # Company Service
 spring.cloud.gateway.routes[0].id=company-service
 spring.cloud.gateway.routes[0].uri=http://localhost:8082
