--- a/GrowthPyramid Backend/eureka-server/src/main/resources/application.properties
+++ b/GrowthPyramid Backend/eureka-server/src/main/resources/application.properties
@@ -3,3 +3,10 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 server.port=8761
 
+# Expose all actuator endpoints
+management.endpoints.web.exposure.include=*
+
+# Optional: Change base path (default is /actuator)
+management.endpoints.web.base-path=/actuator
+
+
