--- a/GrowthPyramid Backend/Collaboration-Request/src/main/resources/application.properties
+++ b/GrowthPyramid Backend/Collaboration-Request/src/main/resources/application.properties
@@ -12,3 +12,8 @@ springdoc.api-docs.path=/api-docs
 
 spring.main.web-application-type=reactive
 
+# Expose all actuator endpoints
+management.endpoints.web.exposure.include=*
+
+# Optional: Change base path (default is /actuator)
+management.endpoints.web.base-path=/actuator
