--- a/GrowthPyramid Backend/OrderManagement/pom.xml
+++ b/GrowthPyramid Backend/OrderManagement/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+		<!-- Spring Boot Actuator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.example</groupId>
 			<artifactId>CompanyManagement</artifactId>
