--- a/GrowthPyramid Backend/CompanyManagement/src/main/resources/application.properties
+++ b/GrowthPyramid Backend/CompanyManagement/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=CompanyManagement
+spring.application.name=company-service
 server.port=8082
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/msaprojecttest
