--- a/GrowthPyramid Backend/Collaboration-Request/src/main/resources/application.properties
+++ b/GrowthPyramid Backend/Collaboration-Request/src/main/resources/application.properties
@@ -8,7 +8,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-springdoc.api-docs.path=/api-docs
-
-spring.main.web-application-type=reactive
+springdoc.api-docs.path=/api/collaboration/api-docs
+springdoc.swagger-ui.path=/api/collaboration/swagger-ui
 
