- Updated actuator endpoints

--- a/GrowthPyramid Backend/Analytics/src/main/resources/application.properties
+++ b/GrowthPyramid Backend/Analytics/src/main/resources/application.properties
@@ -15,4 +15,4 @@ springdoc.swagger-ui.path=/api/analytics/swagger-ui
 management.endpoints.web.exposure.include=*
 
 # Optional: Change base path (default is /actuator)
-management.endpoints.web.base-path=/actuator
+management.endpoints.web.base-path=/api/analytics/actuator
