--- a/GrowthPyramid Backend/OrderManagement/src/main/resources/application.properties
+++ b/GrowthPyramid Backend/OrderManagement/src/main/resources/application.properties
@@ -16,4 +16,4 @@ springdoc.swagger-ui.path=/api/orders/swagger-ui
 management.endpoints.web.exposure.include=*
 
 # Optional: Change base path (default is /actuator)
-management.endpoints.web.base-path=/actuator
+management.endpoints.web.base-path=/api/orders/actuator
